Fix about image alignment

--- a/src/styles/layout/content.css
+++ b/src/styles/layout/content.css
@@ -63,7 +63,7 @@
     }
   }
 
-  figure {
+  picture {
     .content__text--about & {
       @media (--medium) {
         margin-block-end: 0;
